k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thai-practice
  namespace: thai-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thai-practice
  template:
    metadata:
      labels:
        app: thai-practice
    spec:
      containers:
        - name: thai-practice
          image: ghcr.io/3ll34ndr0/thai-practice:5ea74694f782356c9ab816801ae299f3086c7d6b
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8123
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
