k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thai-practice
  namespace: thai-practice
spec:
  selector:
    app: thai-practice
  ports:
    - port: 8123
      targetPort: 8123
