k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thai-practice
  namespace: thai-practice
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: t.marso.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thai-practice
                port:
                  number: 8123
